--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 										blender. Game is available on the google play store.
 									</p>
 									<ul class="actions special">
-										<li><a href="https://play.google.com/store/apps/details?id=com.Future.Wrong" class="button">Full Story</a></li>
+										<li><a href="https://play.google.com/store/apps/details?id=com.Future.Wrong" class="button">Visit</a></li>
 									</ul>
 								</article>
 							</section>
